--- a/html/index.html
+++ b/html/index.html
@@ -43,30 +43,32 @@
     <input id="btn" type="button"  value="submit" onclick="getdata()">
     <!-- <button id="submit" class="btn" onclick="Submit()">Submit</button> -->
   </form>
+  
  </div>
+<div class="divbox">
+<div id="view" class="close">
 
-
-<div id="output">
-<table  border="2" id="table">
+</div>
+</div>
+<table  id="table">
  
-    <tr>
-      <th>ID</th>
-      <th>Fierst Name </th>
-      <th>Last Name</th>
-      <th>Address</th>
-      <th>Date</th>
-      <th>Gender</th>
-      <th>Action</th>
+    <tr id="tr">
+      <th >ID</th>
+      <th >Fierst Name </th>
+      <th >Last Name</th>
+      <th >Address</th>
+      <th >Date</th>
+      <th >Gender</th>
+      <th >Action</th>
     </tr>
- 
+
+
+ </div>
   <tbody id="tbody">
    
     
   </tbody>
 </table>
-</div>
-
-
 
 
     <script src="../javascript/main.js"></script>
